Add starship to shell

--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -17,3 +17,4 @@ set -x PATH {{ $pathDir }} $PATH
 
 status --is-interactive; and pyenv init - | source
 status --is-interactive; and pyenv virtualenv-init - | source
+starship init fish | source
