--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -1,20 +1,5 @@
-. ~/.config/fish/aliases.fish
-
 set fish_greeting
 
-{{ if eq .chezmoi.os "darwin" -}}
-set -x PATH /usr/local/bin $PATH
-{{ if eq .chezmoi.arch "arm64" -}}
-set -x PATH /opt/homebrew/bin $PATH
-{{- end }}
-{{- end }}
+source ~/.asdf/asdf.fish
 
-{{ range $pathDir := .path -}}
-{{ if stat $pathDir -}}
-set -x PATH {{ $pathDir }} $PATH
-{{ end }}
-{{- end }}
-
-status --is-interactive; and pyenv init - | source
-status --is-interactive; and pyenv virtualenv-init - | source
 starship init fish | source
