More tools in path

--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -3,3 +3,6 @@ set fish_greeting
 source ~/.asdf/asdf.fish
 
 starship init fish | source
+
+set -x PATH ~/.local/share/JetBrains/Toolbox/scripts $PATH
+set -x PATH ~/.local/bin $PATH
