Install Golang manually

--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -2,7 +2,11 @@ set fish_greeting
 
 source ~/.asdf/asdf.fish
 
+set -x GOPATH ~/go
+set -x PATH $GOPATH/bin $PATH
+
 starship init fish | source
 
 set -x PATH ~/.local/share/JetBrains/Toolbox/scripts $PATH
 set -x PATH ~/.local/bin $PATH
+set -x PATH /usr/local/go/bin $PATH
