--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -10,3 +10,4 @@ starship init fish | source
 set -x PATH ~/.local/share/JetBrains/Toolbox/scripts $PATH
 set -x PATH ~/.local/bin $PATH
 set -x PATH /usr/local/go/bin $PATH
+set -x PATH ~/.temporalio/bin $PATH
