Manage VS Code config, remove Timestamps in iTerm

--- a/private_dot_config/iterm2/com.googlecode.iterm2.plist.tmpl
+++ b/private_dot_config/iterm2/com.googlecode.iterm2.plist.tmpl
@@ -1018,6 +1018,8 @@
 			<false/>
 			<key>Shortcut</key>
 			<string></string>
+			<key>Show Timestamps</key>
+			<integer>0</integer>
 			<key>Silence Bell</key>
 			<false/>
 			<key>Sync Title</key>
