Non-bright blue

--- a/private_dot_config/iterm2/com.googlecode.iterm2.plist.tmpl
+++ b/private_dot_config/iterm2/com.googlecode.iterm2.plist.tmpl
@@ -1031,7 +1031,7 @@
 			<key>Use Bold Font</key>
 			<true/>
 			<key>Use Bright Bold</key>
-			<true/>
+			<false/>
 			<key>Use Italic Font</key>
 			<true/>
 			<key>Use Non-ASCII Font</key>
