--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -3,7 +3,7 @@ set fish_greeting
 {{ if eq .chezmoi.os "darwin" -}}
 set -x PATH /opt/homebrew/bin $PATH
 set -x PATH "$HOME/Library/Application Support/JetBrains/Toolbox/scripts" $PATH 
-set -x PATH /usr/local/share/dotnet/x64 $PATH
+set -x PATH /usr/local/share/dotnet $PATH
 set -x PATH /Library/TeX/texbin $PATH
 {{- end }}
 
