--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -11,11 +11,17 @@ set -x PATH /Library/TeX/texbin $PATH
 set -x PATH (go env GOPATH)/bin $PATH
 set -x PATH ~/.local/bin $PATH
 
-{{ if eq .chezmoi.os "darwin" -}}
-    source /opt/homebrew/opt/asdf/libexec/asdf.fish
-{{- else -}}
-    source ~/.asdf/asdf.fish
-{{- end }}
+# ASDF configuration
+if test -z $ASDF_DATA_DIR
+    set _asdf_shims "$HOME/.asdf/shims"
+else
+    set _asdf_shims "$ASDF_DATA_DIR/shims"
+end
+
+if not contains $_asdf_shims $PATH
+    set -gx --prepend PATH $_asdf_shims
+end
+set --erase _asdf_shims
 
 starship init fish | source
 zoxide init fish | source
