--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -6,6 +6,7 @@ set -x PATH /opt/homebrew/sbin $PATH
 set -x PATH "$HOME/Library/Application Support/JetBrains/Toolbox/scripts" $PATH 
 set -x PATH /usr/local/share/dotnet $PATH
 set -x PATH /Library/TeX/texbin $PATH
+set -x PATH "$HOME/.codeium/windsurf/bin" $PATH
 {{- end }}
 
 set -x PATH (go env GOPATH)/bin $PATH
