Initialize mise on Linux

--- a/private_dot_config/private_fish/config.fish.tmpl
+++ b/private_dot_config/private_fish/config.fish.tmpl
@@ -15,3 +15,7 @@ set -x PATH ~/.local/bin $PATH
 starship init fish | source
 zoxide init fish | source
 fzf --fish | source
+
+{{ if ne .chezmoi.os "darwin" -}}
+mise activate fish | source
+{{- end }}
